src/test/deca/context/invalid/provided/class6.deca
class A {
    int x;

    int setX(int x){
        this.x=x;
    }
}
{
    A a = new A();
    a.setX(true);
}